--- a/src/assets/fontello/demo.html
+++ b/src/assets/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?46078417');
-      src: url('./font/fontello.eot?46078417#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?46078417') format('woff'),
-           url('./font/fontello.ttf?46078417') format('truetype'),
-           url('./font/fontello.svg?46078417#fontello') format('svg');
+      src: url('./font/fontello.eot?89866124');
+      src: url('./font/fontello.eot?89866124#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?89866124') format('woff'),
+           url('./font/fontello.ttf?89866124') format('truetype'),
+           url('./font/fontello.svg?89866124#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -253,6 +253,9 @@
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xe80c">
+          <i class="demo-icon icon-location">&#xe80c;</i> <span class="i-name">icon-location</span><span class="i-code">0xe80c</span>
+        </div>
         <div class="span3" title="Code: 0xf004">
           <i class="demo-icon icon-down-open">&#xf004;</i> <span class="i-name">icon-down-open</span><span class="i-code">0xf004</span>
         </div>
@@ -262,6 +265,8 @@
         <div class="span3" title="Code: 0xf006">
           <i class="demo-icon icon-right-open">&#xf006;</i> <span class="i-name">icon-right-open</span><span class="i-code">0xf006</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf007">
           <i class="demo-icon icon-left-open">&#xf007;</i> <span class="i-name">icon-left-open</span><span class="i-code">0xf007</span>
         </div>
